h/static/styles/inject.scss
@import 'base';
@import 'mixins/icons';
@import 'compass/css3/user-interface';
@import 'compass/layout/stretching';
@import 'compass/reset/utilities';

$base-font-size: 14px;

//ADDER////////////////////////////////
.annotator-adder {
  $border: $gray;
  $hoverborder: $gray-dark;
  @include box-sizing(border-box);
  direction: ltr;
  height: 40px;
  margin-left: -20px;
  margin-top: -50px;
  padding: 0;
  position: absolute;
  border: 4px solid $border;
  border-radius: 8px;
  width: 40px;
  z-index: 999;

  &:before {
    @include rotate(45deg);
    background: #fdfdfd;
    bottom: -8px;
    border-bottom: 4px solid $border;
    border-right: 4px solid $border;
    content: "";
    display: block;
    height: 6px;
    left: 0;
    margin-left: auto;
    margin-right: auto;
    position: absolute;
    right: 0;
    width: 6px;
  }

  button {
    @include sweetbutton;
    font-family: h;
    border: none;
    cursor: pointer;
    height: 100%;
    width: 100%;
    font-size: 18px;
    margin: 0;
    padding: 0;
    text-align: center;
    background: white !important;
    color: $border !important;

    &::-moz-focus-inner {
      border: 0;
    }

    &:hover {
      color: $hoverborder !important;
    }
  }

  &:hover {
    border-color: $hoverborder;

    &:before {
      border-color: $hoverborder;
    }
  }
}


//HEATMAP STUFF////////////////////////////////
.annotator-frame {
  .annotator-heatmap {
    cursor: ew-resize;
    position: absolute;
    overflow: hidden;

    height: 100%;
    width: $heatmap-width + 18px;
    left: -($heatmap-width + 18px);
  }

  .annotator-heatmap-bar {
    @include stretch-y;
    background: hsla(0, 0, 0, .1);
    border-left: solid 1px $gray-lighter;
    height: 100%;
    left: 18px;
    width: $heatmap-width;
  }
}

.annotator-frame {
  @import 'pointers';
}

//HIGHLIGHTS////////////////////////////////
.annotator-highlights-always-on .annotator-hl,
.annotator-hl-active, .annotator-hl-temporary, .annotator-hl-focused {
  background: $highlight-color;

  .annotator-hl {
    background-color: $highlight-color-second;
  }

  .annotator-hl .annotator-hl {
    background-color: $highlight-color-third;
  }

  &::-moz-selection {
    background: $highlight-color;
  }
  &::-moz-selection, &::-moz-window-inactive, &::window-inactive {
    background: $highlight-color;
  }
  &::selection, &::selection:window-inactive {
    background: $highlight-color;
  }
}

.annotator-highlights-always-on .annotator-hl {
  background: $highlight-mode-color;

  .annotator-hl {
    background-color: $highlight-mode-color-second;
  }

  .annotator-hl .annotator-hl {
    background-color: $highlight-mode-color-third;
  }
}

.annotator-highlights-always-on .annotator-hl-active,
.annotator-highlights-always-on .annotator-hl-focused {
  background-color: $highlight-mode-active-color;
}

// Sidebar
.annotator-frame {
  @import 'reset';
  @include nested-reset;
  @include reset-box-model;
  @include user-select(none);
  @extend .noise;
  direction: ltr;
  background: none;
  font-size: $base-font-size;
  line-height: $base-line-height;
  height: 100%;
  position: fixed;
  top: 0;
  left: 100%;
  z-index: 10000;
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);

  &.annotator-collapsed {
    margin-left: 0;
  }

  * {
    background: none;
    font-size: 100%;
    text-indent: 0;
    height: initial;
    width: initial;
  }

  & > iframe {
    height: 100%;
    width: 100%;
    z-index: 3;
    position: relative;
  }

  @include icons {
    font-family: 'h';
  }
}

.annotator-no-transition {
  @include transition(none !important);
}


//CONTROLBAR STUFF////////////////////////////////
.annotator-frame .annotator-toolbar {
  position: absolute;
  left: -($heatmap-width + 18px - 7px);
  width: 37px;
  z-index: 2;

  ul {
    height: 100%;
  }

  ul, li {
    @include box-sizing(border-box);
    @include reset-box-model;
    @include reset-list-style;
  }
}

.annotator-frame .annotator-toolbar.annotator-hide {
  display: block;
  visibility: visible;

  li {
    @include transition-delay(.75s);
    @include transition-timing-function(cubic-bezier(1, .1, .55, 0));
    height: 0;
    left: 34px;
    margin-top: -2px;
    &:first-child, &.annotator-pushed {
      @include transition-delay(0);
      left: 3px;
      height: 30px;
    }
    &.annotator-pushed {
      margin-top: 5px;
    }
  }
}

.annotator-frame .annotator-toolbar li {
  @include smallshadow;
  @include transition-property(left, height, margin-top);
  @include transition-duration(.25s);
  @include transition-delay(0);
  @include transition-timing-function(cubic-bezier(0, .55, .1, 1));
  background: $white;
  border: solid 1px $gray-lighter;
  border-radius: 4px;
  left: 0;
  margin-top: 5px;
  overflow: hidden;
  position: relative;
  height: 30px;
  width: 30px;

  &:first-child {
    @include box-shadow(none);
    border-radius: 4px 0 0 4px;
    border-right-style: none;
    margin-top: 0;
    width: 36px;
    z-index: 1;
  }

  &.annotator-pushed {
    @include box-shadow(none);
    left: 3px;
    z-index: 1;

    a {
      color: $link-color;
    }
  }

  a {
    background: $white;
    font-size: 1.3em;
    line-height: 28px;

    position: absolute;
    left: 5px;
    color: rgba(200, 200, 200, .3);

    text-decoration: none;
    text-shadow: 0 0 2px $gray-lightest, 0 0 0 $gray;
  }

  a:focus, a:hover {
    outline: 0;
    color: $link-color-hover;
  }

  .annotator-toolbar-toggle {
    &:hover, &:focus {
      color: fade-out($gray-lightest, .9);
    }
  }
}

/*
  Mobile layout
  240-479 px
  Zoomed out below 320 px
*/

@media screen and (min-width: 15em) {
  .annotator-frame {
    width: 90%;
    margin-left: -90%;
  }
}

/*
  Wide mobile layout
  480-767 px
  Zoomed in above 480 px
*/

@media screen and (min-width: 30em) {
  .annotator-frame {
    width: 70%;
    margin-left: -70%;
  }
}

/*
  Tablet layout
  600-911 px
  Zoomed in above 600 px
*/

@media screen and (min-width: 37.5em) {
  .annotator-frame {
    @include single-transition(margin-left, .25s);
    @include transition-timing-function(cubic-bezier(.55, 0, .2, .8));
    width: 428px;
    margin-left: -428px;
  }
}

/*
  Widescreen layout
  912-1887 px
  Zoomed in above 912 px
*/

@media screen and (min-width: 57em) {
}

/*
  Huge-screen layout
  1888-2520 px
  Zoomed in above 1920 px
*/

@media screen and (min-width: 118em) {
}

